--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/node": "^24.10.1",
-    "ajv": "^8.17.1"
+    "ajv": "^8.17.1",
+    "genson-js": "^0.0.8"
   }
 }
