--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@playwright/test": "^1.57.0",
     "@types/node": "^24.10.1",
     "ajv": "^8.17.1",
+    "dotenv": "^17.2.3",
     "genson-js": "^0.0.8"
   }
 }
